tests/textual/error/headList-no-force.uplc
(program 0.0.0 [(builtin headList) (con list(integer) [ 1, 2 ])])